2026-02-05  G. Branden Robinson <g.branden.robinson@gmail.com>

	* doc/doc.am (maintainer-clean-local): Clean "gnu.eps" file in
	"maintainer mode".

2026-02-05  G. Branden Robinson <g.branden.robinson@gmail.com>

	* Makefile.am: Add ".version" file to `MOSTLYCLEANFILES` macro.

2026-02-05  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/number.cpp (is_valid_term): Reintroduce warning
	in category "tab" when a tab character starts a numeric
	expression.  Lacking it caused the formatter to throw a huge
	number of error diagnostics (with no harmful effect on
	formatting, thus unproductively alarming the user) when
	springing traps in Matt Bishop's vintage "mn" macro package.

	Fixes <https://savannah.gnu.org/bugs/?68017>.  Partially reverts
	commit 64711b3a875, 14 November.

2026-01-20  Deri James  <deri@chuzzlewit.myzen.co.uk>

	Change location of the Inline::C build directory.

	* src/devices/gropdf/gropdf.pl: Update copyright.  Include
	module File::Path (part of perl since before version 5.8).
	Adjust location of Inline::C's cache directory according to XDG
	standards, rather than $HOME/_Inline.

	Fixes <https://savannah.gnu.org/bugs/?67997>.  Thanks to Bruno
	Haible for the information in <https://lists.gnu.org/archive/\
	html/groff/2026-01/msg00140.html>.

2026-02-04  G. Branden Robinson <g.branden.robinson@gmail.com>

	Stop using `${1+"$@"}` to kludge around old broken shells.

	The (forthcoming) Autoconf 2.73 manual explains.

	---snip---
	You may see usages like ‘${1+"$@"}’ in older shell scripts
	designed to work around a portability problem in ancient shells.
	Unfortunately this runs afoul of bugs in more-recent shells, and
	nowadays it is better to use plain ‘"$@"’ instead.

	The portability problem with ancient shells was significant.
	When there are no positional arguments ‘"$@"’ should be
	discarded, but the original Unix version 7 Bourne shell
	mistakenly treated it as equivalent to ‘""’ instead, and many